--- a/src/scss/variables/_sizes.scss
+++ b/src/scss/variables/_sizes.scss
@@ -1,3 +1,4 @@
 $regular-text-title-font-size: 1.2rem;
 $regular-text-font-size: 1rem;
-$button-font-size: 1.5rem;
+$link-font-size: 1.3rem;
+$button-font-size: 1.3rem;
