--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -63,3 +63,8 @@ a {
       }
    }
 }
+@media screen and (max-width: breakPoints.$small-screen) {
+   .title-big {
+      font-size: 3rem;
+   }
+}
