Make image text responsive for smaller devices

--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -27,3 +27,22 @@ $margin-values: (15px, 20px, 25px, 30px, 35px, 50px, 100px);
       max-width: 95vw;
    }
 }
+
+@media screen and (max-width: breakPoints.$medium-screen) {
+   $padding-values: (1em, 2em, 3em, 4em, 5em);
+
+   @each $value in $padding-values {
+      $index: index($padding-values, $value);
+      .py-#{$index} {
+         padding-block: $value;
+      }
+   }
+
+   $margin-values: (15px, 20px, 25px, 30px, 35px, 50px, 60px);
+   @each $value in $margin-values {
+      $index: index($margin-values, $value);
+      .mb-#{$index} {
+         margin-bottom: $value;
+      }
+   }
+}
