--- a/src/components/sliderCard/style.scss
+++ b/src/components/sliderCard/style.scss
@@ -6,7 +6,8 @@
    text-align: center;
    padding-inline: 15px;
    img {
-      width: 50%;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       object-fit: cover;
    }
