--- a/src/components/slider/style.scss
+++ b/src/components/slider/style.scss
@@ -1,7 +1,46 @@
+@use '../../scss/variables/colors';
+
 #slider {
    .title-big {
       width: 60%;
       margin-inline: auto;
       text-align: center;
+   }
+   .sliderDiv {
+      position: relative;
+      #prevBtn,
+      #nextBtn {
+         position: absolute;
+         display: flex;
+         align-items: center;
+         background-color: colors.$bg-primary;
+         border: 2px solid colors.$primary-color;
+         border-radius: 5px;
+         width: 50px;
+         height: 50px;
+         top: 50%;
+         transform: translateY(-50%);
+         z-index: 5;
+         cursor: pointer;
+         &::after {
+            color: colors.$primary-color;
+         }
+         &.swiper-button-disabled {
+            border-color: colors.$tertiary-color;
+            svg#left-arrow path,
+            svg#right-arrow path {
+               fill: colors.$tertiary-color;
+            }
+         }
+         img {
+            width: 100%;
+         }
+      }
+      #prevBtn {
+         left: -25px;
+      }
+      #nextBtn {
+         right: -25px;
+      }
    }
 }
