Code review - rename file

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
 @forward './reset';
-@forward './fonts';
+@forward './typography';
 @forward './backgrounds';
 @forward './buttons';
 @forward './utilities';
