--- a/src/components/slider/small-devices.scss
+++ b/src/components/slider/small-devices.scss
@@ -20,3 +20,10 @@
       }
    }
 }
+@media screen and (max-width: breakPoints.$small-screen) {
+   #slider {
+      .title-big {
+         width: 100%;
+      }
+   }
+}
