Code review - adjust ImgText component image alignment for larger screen

--- a/src/components/ImgText/small-devices.scss
+++ b/src/components/ImgText/small-devices.scss
@@ -46,3 +46,13 @@
       }
    }
 }
+
+@media screen and (min-width: 1440px) {
+   #imgText {
+      .container {
+         .image {
+            margin-right: unset;
+         }
+      }
+   }
+}
