--- a/src/components/slider/small-devices.scss
+++ b/src/components/slider/small-devices.scss
@@ -7,6 +7,21 @@
       }
       &.container {
          max-width: 90vw;
+         .sliderDiv {
+            #prevBtn,
+            #nextBtn {
+               width: 50px;
+               height: 50px;
+               padding: 0;
+               overflow: hidden;
+            }
+            #prevBtn {
+               left: -25px;
+            }
+            #nextBtn {
+               right: -25px;
+            }
+         }
       }
    }
 }
