--- a/src/components/slider/style.scss
+++ b/src/components/slider/style.scss
@@ -16,8 +16,9 @@
          background-color: colors.$bg-primary;
          border: 3px solid colors.$primary-color;
          border-radius: 7px;
-         width: 50px;
-         height: 50px;
+         padding: 10px;
+         width: 75px;
+         height: 70px;
          top: 50%;
          transform: translateY(-50%);
          z-index: 5;
@@ -37,10 +38,10 @@
          }
       }
       #prevBtn {
-         left: -25px;
+         left: -37px;
       }
       #nextBtn {
-         right: -25px;
+         right: -37px;
       }
    }
 }
