--- a/src/components/slider/small-devices.scss
+++ b/src/components/slider/small-devices.scss
@@ -12,7 +12,7 @@
             #nextBtn {
                width: 50px;
                height: 50px;
-               padding: 0;
+               padding: 5px;
                overflow: hidden;
             }
             #prevBtn {
@@ -39,6 +39,9 @@
    #slider {
       .title-big {
          width: 100%;
+      }
+      &.container {
+         max-width: 85vw;
       }
    }
 }
