--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -35,7 +35,7 @@ p {
    line-height: 1.3rem;
    &.regular-text-title {
       font-size: sizes.$regular-text-title-font-size;
-      font-weight: bold;
+      font-weight: 900;
    }
 }
 
