Code review - Improve styling

--- a/src/components/hero/style.scss
+++ b/src/components/hero/style.scss
@@ -1,11 +1,18 @@
 #hero {
    display: grid;
-   grid-template-columns: auto 2fr;
-   gap: 10em;
+   grid-template-columns: auto 55%;
+   grid-gap: 10%;
+   .text {
+      p {
+         text-align: justify;
+      }
+   }
    .heroImage {
       img {
-         width: auto;
+         display: block;
          object-fit: cover;
+         width: 100%;
+         height: 100%;
       }
    }
 }
