--- a/src/components/hero/small-devices.scss
+++ b/src/components/hero/small-devices.scss
@@ -2,22 +2,13 @@
 
 @media screen and (max-width: breakPoints.$large-screen) {
    #hero {
-      display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 5em;
-      .heroImage {
-         img {
-            display: block;
-            width: 100%;
-            height: 100%;
-         }
-      }
+      grid-gap: 5em;
    }
 }
 
 @media screen and (max-width: breakPoints.$medium-screen) {
    #hero {
-      display: grid;
       grid-template-columns: 1fr;
       gap: 3em;
    }
