--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -3,10 +3,11 @@
 
 .btn {
    border: 3px solid colors.$bg-tertiary;
-   font-weight: 900;
+   font-weight: 600;
    border-radius: 8px;
    padding: 13px 55px;
    font-size: sizes.$button-font-size;
+   -webkit-text-stroke: 1px;
    cursor: pointer;
    transition: all 0.25s ease-in-out;
    &-primary {
