--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -10,9 +10,11 @@
 .title {
    font-family: fonts.$heading-font;
    font-weight: bold;
+   -webkit-text-stroke: 1px;
    &-big {
       @extend .title;
       font-size: 5rem;
+      -webkit-text-stroke: 2px;
    }
    &-medium {
       @extend .title;
