Code review - Improve desktop container sizing

--- a/src/components/header/small-devices.scss
+++ b/src/components/header/small-devices.scss
@@ -17,6 +17,7 @@
       justify-content: center;
       align-items: center;
       padding-block: 2em;
+      gap: 1rem;
 
       .links {
          gap: 1em;
